fixed bug in layout that caused breakage on mobile. Application is now responsive.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     background: url("../images/page.png");
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     background-size: 100%;
     font-family: "Bookmania Regular", "Regular Italic", Bold;
     Font-size: 9pt;
@@ -69,6 +69,7 @@ body {
     font-size: 20pt;
     border: solid 5px #9d0a0e;
     border-radius: 20%;
+    z-index: 100;
 }
 .clear {
     clear: both;
